[gd_scene load_steps=16 format=3 uid="uid://bp00sqp5a1o8w"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_od2rn"]
[ext_resource type="Texture2D" uid="uid://b4a4uyq7puli" path="res://static/background/menu_background.jpg" id="2_bh4ij"]
[ext_resource type="PackedScene" uid="uid://mb32hps3uwxd" path="res://scenes/options_menu.tscn" id="2_sks7e"]
[ext_resource type="PackedScene" uid="uid://383gtl7ftag0" path="res://scenes/lobby_menu.tscn" id="3_57ui8"]
[ext_resource type="FontFile" uid="uid://dka1g6k5vpcco" path="res://static/8bit-Font/PressStart2P-vaV7.ttf" id="3_aqv0u"]
[ext_resource type="Texture2D" uid="uid://bufjb6pcgtv1d" path="res://static/background/spaceship_logo.png" id="4_rf6vh"]
[ext_resource type="PackedScene" uid="uid://bxofw8l14noc7" path="res://scenes/credits.tscn" id="4_sfqjc"]
[ext_resource type="PackedScene" uid="uid://cy4aexa3idkox" path="res://scenes/game_container.tscn" id="4_wc5hr"]
[ext_resource type="AudioStream" uid="uid://lcbev3lmqlql" path="res://static/sound/short_beep.mp3" id="5_6t7wa"]
[ext_resource type="AudioStream" uid="uid://byj4f61hxqxhf" path="res://static/sound/main_menu_music_hs.mp3" id="6_wbn7o"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lgeep"]
texture = ExtResource("2_bh4ij")
modulate_color = Color(0.351563, 0.351563, 0.351563, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fcdpr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bv64x"]
bg_color = Color(0.149558, 0.204784, 0.561486, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t4pd0"]
bg_color = Color(0.0827821, 0.119793, 0.363213, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_und21"]
bg_color = Color(0.202576, 0.272896, 0.705924, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10
shadow_offset = Vector2(5, 5)

[node name="MainMenu" type="Control" node_paths=PackedStringArray("beeper", "main_menu_music")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_od2rn")
beeper = NodePath("Beeper")
main_menu_music = NodePath("MenuBackgroundMusic")
options_menu = ExtResource("2_sks7e")
lobby_menu = ExtResource("3_57ui8")
credits = ExtResource("4_sfqjc")
game_container = ExtResource("4_wc5hr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_lgeep")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = -44.0
offset_right = 227.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_aqv0u")
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_fcdpr")
theme_override_styles/hover = SubResource("StyleBoxFlat_bv64x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t4pd0")
theme_override_styles/normal = SubResource("StyleBoxFlat_und21")
text = "Start Game
"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/StartButton"]
layout_mode = 0
offset_right = 460.0
offset_bottom = 69.0

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_aqv0u")
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_fcdpr")
theme_override_styles/hover = SubResource("StyleBoxFlat_bv64x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t4pd0")
theme_override_styles/normal = SubResource("StyleBoxFlat_und21")
text = "Options
"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/OptionsButton"]
layout_mode = 0
offset_right = 460.0
offset_bottom = 69.0

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_aqv0u")
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_fcdpr")
theme_override_styles/hover = SubResource("StyleBoxFlat_bv64x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t4pd0")
theme_override_styles/normal = SubResource("StyleBoxFlat_und21")
text = "Credits"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/CreditsButton"]
layout_mode = 0
offset_right = 460.0
offset_bottom = 69.0

[node name="SpaceshipLogo" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(596, -77)
rotation = 0.567408
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_rf6vh")

[node name="GameTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = -177.0
offset_right = 308.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 30
theme_override_fonts/font = ExtResource("3_aqv0u")
theme_override_font_sizes/font_size = 56
text = "Holy Ships!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Beeper" type="AudioStreamPlayer2D" parent="."]
position = Vector2(349, 280)
stream = ExtResource("5_6t7wa")
volume_db = -15.0
bus = &"Music"

[node name="MenuBackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_wbn7o")
bus = &"Music"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/StartButton/TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/OptionsButton/TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/CreditsButton/TextureRect" to="." method="_on_texture_rect_mouse_entered"]
