[gd_scene load_steps=10 format=3 uid="uid://bp00sqp5a1o8w"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_od2rn"]
[ext_resource type="Texture2D" uid="uid://b4a4uyq7puli" path="res://Assets/menu_background.jpg" id="2_bh4ij"]
[ext_resource type="FontFile" uid="uid://dka1g6k5vpcco" path="res://Assets/8bit-Font/PressStart2P-vaV7.ttf" id="3_aqv0u"]
[ext_resource type="Texture2D" uid="uid://bufjb6pcgtv1d" path="res://Assets/spaceship_logo.png" id="4_rf6vh"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lgeep"]
texture = ExtResource("2_bh4ij")
modulate_color = Color(0.351563, 0.351563, 0.351563, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fcdpr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bv64x"]
bg_color = Color(0.149558, 0.204784, 0.561486, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t4pd0"]
bg_color = Color(0.0827821, 0.119793, 0.363213, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_und21"]
bg_color = Color(0.202576, 0.272896, 0.705924, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10
shadow_offset = Vector2(5, 5)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_od2rn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_lgeep")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.0
offset_top = -44.0
offset_right = 227.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_aqv0u")
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_fcdpr")
theme_override_styles/hover = SubResource("StyleBoxFlat_bv64x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t4pd0")
theme_override_styles/normal = SubResource("StyleBoxFlat_und21")
text = "Start Game
"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_aqv0u")
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_fcdpr")
theme_override_styles/hover = SubResource("StyleBoxFlat_bv64x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t4pd0")
theme_override_styles/normal = SubResource("StyleBoxFlat_und21")
text = "Options
"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_aqv0u")
theme_override_font_sizes/font_size = 34
theme_override_styles/focus = SubResource("StyleBoxEmpty_fcdpr")
theme_override_styles/hover = SubResource("StyleBoxFlat_bv64x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_t4pd0")
theme_override_styles/normal = SubResource("StyleBoxFlat_und21")
text = "Exit"

[node name="SpaceshipLogo" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(596, -77)
rotation = 0.567408
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_rf6vh")

[node name="GameTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = -177.0
offset_right = 308.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 30
theme_override_fonts/font = ExtResource("3_aqv0u")
theme_override_font_sizes/font_size = 56
text = "Holy Ships!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
